--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -445,7 +445,7 @@
       "text": "Vous aimez miser gros? Dans ce cas, nous savons ce dont vous avez besoin. Une fois par mois, bénéficiez d’un bonus spécial pour les grands joueurs de 30% jusqu’à $800 sur votre dépôt à partir de $450."
     },
     "dropsWinsSlots": {
-      "title": "Drops<span class=\"Colored\"> & </span>Wins",
+      "title": "Drops<span class=\"Colored\"> & </span>Wins <br/>Slots",
       "name": "Drops & Wins Slots",
       "text": "Bienvenue à la nouvelle étape 8 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! <br/><br/>Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, C’est pourquoi, cette fois, les semaines 29–32 des tournois hebdomadaires (semaines à prix multiplicateur) et des remises de prix quotidiennes (semaines à prix multiplicateur) avec de nouveaux jeux!"
     },
@@ -498,7 +498,7 @@
     "previousRound": "Tour précédent"
   },
   "dropsWinsSlots": {
-    "title": "Drops & Wins Slots",
+    "title": "Drops <span class=\"Colored\">&</span> Wins Slots",
     "prize": "4 000 000 €",
     "text": "Bienvenue à la nouvelle étape 8 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Jouer avec un multiplicateur est plus amusant. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 13–16 des tournois hebdomadaires (semaines à prix multiplicateur) et des remises de prix quotidiennes (semaines à prix multiplicateur) avec de nouveaux jeux!",
     "textMobile": "Bienvenue à la nouvelle étape 8 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
@@ -526,14 +526,14 @@
     ]
   },
   "dropsWinsLive": {
-    "title": "Drops & Wins for Live Casino",
+    "title": "DROPS <span class=\"Colored\">&</span> WINS FOR LIVE CASINO",
     "prize": "3 000 000 €",
     "text": "Pragmatic Play vous donne de plus en plus de chances de vous divertir en passant au niveau supérieur grâce à son nouveau Drops and Wins for Live Casino. Saisissez la chance de gagner une part de l’impressionnant montant de 3 000 000 € de prix en argent!<br/><br/>Aimez-vous les jeux en direct? Cette édition en direct vous ira à coup sûr. Participez aux tournois hebdomadaires  - Roulette, Blackjack, Grande Roue, Baccarat!",
     "textMobile": "Pragmatic Play vous donne de plus en plus de chances de vous divertir en passant au niveau supérieur grâce à son nouveau Drops and Wins for Live Casino. Saisissez la chance de gagner une part de l’impressionnant montant de 3 000 000 € de prix en argent!",
     "terms": [
       {
-        "title": "L’étape 3 se déroule ainsi<br/><br/>",
-        "text": "● Semaine 9: 28 juli 2021 09:01 CEST – 4 août 2021 18:59 CEST<br/>● Semaine 10: 4 août 2021 19:01 CEST – 11 août 2021 18:59 CEST<br/>● Semaine 11: 11 août 2021 19:01 CEST – 18 août 2021 18:59 CEST<br/>● Semaine 12: 18 août 2021 19:01 CEST – 25 août 2021 18:59 CEST"
+        "title": "L’étape 4 se déroule ainsi<br/><br/>",
+        "text": "● Semaine 13: 25 août 2021 09:01 CEST – 1 septembre 2021 18:59 CEST<br/>● Semaine 14: 1 septembre 2021 19:01 CEST – 8 septembre 2021 18:59 CEST<br/>● Semaine 15: 8 septembre 2021 19:01 CEST – 15 septembre 2021 18:59 CEST<br/>● Semaine 16: 15 septembre 2021 19:01 CEST – 22 septembre 2021 18:59 CEST"
       },
       {
         "title": "Jeux/Tables participants<br/><br/>",
