--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -149,7 +149,11 @@
     "card": "Card",
     "recent": "Last",
     "new": "New",
-    "buybonus": "Bonus Buy"
+    "buybonus": "Bonus Buy",
+    "megaways": "Megaways",
+    "luckychoice": "Lucky choice",
+    "DROP&WINS": "Drops & Wins Slots",
+    "jackpots": "Jackpots"
   },
   "gameCategories": {
     "top": "Top games",
@@ -161,7 +165,11 @@
     "card": "Card games",
     "recent": "Last games",
     "new": "New games",
-    "buybonus": "Bonus Buy"
+    "buybonus": "Bonus Buy",
+    "megaways": "Megaways",
+    "luckychoice": "Lucky choice",
+    "DROP&WINS": "Drops & Wins Slots",
+    "jackpots": "Jackpots"
   },
   "footer": {
     "text": {
