NINE-654 added new text to welcome package

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1255,7 +1255,8 @@
         "Aktivační doba spinů zdarma je 3 dny, doba trvání spinů zdarma a trvání výsledků spinů zdarma činí 7 dní.",
         "Pro protočení bonusu / výsledek spinu zdarma musíte provést sázky ve výši odpovídající 40násobku bonusu / výsledku spinu zdarma.",
         "Maximální výhra z prvních/druhých/třetích spinů zdarma z vkladů činí 50 EUR, 70 CAD, 80 AUD, 1300 CZK, 860 ZAR, 100 BGN, 370 DKK, 375 HRK, 245 RON, 0,0019 BTC.",
-        "Maximální výhra vyplývající z bezplatných spinů přihlášení činí 50 EUR, 70 CAD, 80 AUD, 1300 CZK, 860 ZAR, 100 BGN, 370 DKK, 375 HRK, 245 RON, 0,0019 BTC."
+        "Maximální výhra vyplývající z bezplatných spinů přihlášení činí 50 EUR, 70 CAD, 80 AUD, 1300 CZK, 860 ZAR, 100 BGN, 370 DKK, 375 HRK, 245 RON, 0,0019 BTC.",
+        "Všechny promo akce jsou určeny pouze pro hráče, kteří splnili podmínky bonusů uvítacího balíčku včetně počtu protočení. Pokud jste získali rozšířený uvítací balíček, nemusíte splňovat podmínku protočení, abyste mohli akceptovat další promo akce."
       ],
       "title3": "Víkendové opakované nabití",
       "text3": [
